styles/header.css
.cabecalho__menu-hamburguer {
  width: 24px;
  height: 24px;
  background-image: url(../assets/Menu.svg);
  background-repeat: no-repeat;
  display: inline-block;
}

.cabecalho {
  background-color: var(--branco);
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
}

.container {
  display: flex;
  align-items: center;
}

.container__imagem {
  padding: 1em;
}


.lista-menu {
  display: none;
  position: absolute;
  top: 100%;
  width: 60vw;
}

.container__botao:checked~.lista-menu {
  display: block;
}

.lista-menu__link {
  background: var(--azul-degrade);
  --webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  text-transform: uppercase;
}

.lista-menu__titulo,
.lista-menu__item {
  padding: 1em;
  background-color: var(--branco);
}

.lista-menu__titulo {
  color: var(--laranja);
  font-weight: 700;
}

.opcoes,                   
.opcoes__botao,
.container__link__description,
.container__titulo {
  display: none;
}

@media screen and (min-width: 1024px) {
  .container__link__description {
    display: block;
  }

  .container__titulo
  .container__alura--negrito {
    font-size: 30px;
    font-family: var(--fonte-secundaria);
  }
  
  .container__titulo {
    display: block;
    font-weight: 400;
  }

  .container__alura--negrito {
    font-weight: 700;
  }

  .opcoes {
    display: flex;
  }

  .opcoes__item {
    padding: 0 1em;
    text-transform: uppercase;
  }

  .opcoes__item_link {
    text-decoration: none;
    color: var(--preto);
  }

  .cabecalho__menu-hamburguer,
  .container__image-transaparente {
    display: none;
  }


  .opcoes__botao:checked~.lista-menu {
    display: block;
    width: auto;
  }
}

@media screen and (min-width: 1728px) {
  .container__link {
    display: flex;
    align-items: center;
    text-decoration: none;
    color: var(--preto);
  }

  .cabecalho {
    padding: 0.2em;
  }
}

